<resources>
    <string name="app_name">Emergency App</string>
    <string name="sos_menu">SOS</string>
    <string name="help">Help</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Home</string>
    <string name="sos_service_title">SOS help needed?</string>
    <string name="press_here_to_call">Press the red button below to request for help</string>
    <string name="need_help">Need help?</string>
    <string name="click_here_for_guidance">Click here for typing mode</string>
    <string name="ambulance">Ambulance</string>
    <string name="police">Police</string>
    <string name="firefighter">Firefighter</string>
    <string name="guideline">Guideline</string>
    <string name="see_your_location">See your location</string>
    <string name="dummy_location">-</string>
    <string name="transcription">Transcription</string>
    <string name="no_transcription">Currently you have no audio to transcribe. Press the record button below.</string>
    <string name="title_activity_maps">Map</string>
    <string name="language">Change language</string>
    <string name="cant_talk">Can\'t talk?</string>
    <string name="name_type">Name</string>
    <string name="location">Location</string>
    <string name="write_your_name">Write your name</string>
    <string name="write_your_location">Write your location</string>
    <string name="situation">Situation</string>
    <string name="write_down_your_current_situation">Write down your current situation</string>
    <string name="settings">Settings</string>
    <string name="news">News</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="entertainment">Entertainment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="dummy_news_title" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</string>
    <string name="dummy_hours_ago" translatable="false">4 hours ago</string>
    <string name="dummy_source" translatable="false">Tempo.co</string>
    <string name="dummy_text" translatable="false">
        So how did the classical Latin become so incoherent? According to McClintock, a 15th century typesetter likely scrambled part of Cicero\'s De Finibus in order to provide placeholder text to mockup various fonts for a type specimen book.
    </string>
    <string name="dummy_content" translatable="false">
        So how did the classical Latin become so incoherent? According to McClintock, a 15th century typesetter likely scrambled part of Cicero\'s De Finibus in order to provide placeholder text to mockup various fonts for a type specimen book.

It\'s difficult to find examples of lorem ipsum in use before Letraset made it popular as a dummy text in the 1960s, although McClintock says he remembers coming across the lorem ipsum passage in a book of old metal type samples. So far he hasn\'t relocated where he once saw the passage, but the popularity of Cicero in the 15th century supports the theory that the filler text has been used for centuries.

And anyways, as Cecil Adams reasoned, “[Do you really] think graphic arts supply houses were hiring classics scholars in the 1960s?” Perhaps. But it seems reasonable to imagine that there was a version in use far before the age of Letraset.
    </string>
    <string name="fail_connect" translatable="false">Check your internet connection and try again.</string>
    <string name="hospital">Hospital</string>
    <string name="tips">Tips</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="login">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="create">Create</string>
    <string name="account">Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="keep_your_safety">Keep your safety.</string>
    <string name="join_tolong_app">Join us</string>
    <string name="edit_profile">Edit profile</string>
    <string name="hello">Hello!</string>
    <string name="log_out">Log out</string>
    <string name="title_settings">Settings</string>
    <string name="fire">Fire</string>
    <string name="traffic">Driving</string>
    <string name="crime">Crime</string>
    <string name="cancel">Cancel</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="done">Done</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="name">Name</string>
    <string name="full_name">Full Name</string>

    //Tips data
    //Traffic
    <string name="title_traffic">Driving Tips</string>
    <string name="description_traffic">
        To be a safe driver, you will need a disciplined attitude to follow all the rules that are
        there. It is true that all drivers want a fast route and get to their destinations as quick as
        possible, but you need to realize that the road is not yours and there are other people too.
        These are the tips for you to be a more safer driver!
    </string>
    <string-array name="tips_traffic">
        <item>Make sure that your vehicle is in good condition.</item>
        <item>Make sure that the driver is fit and healthy.</item>
        <item>Wear your safety belts or other safety gears like a helmet if you\'re riding a motorcycler</item>
        <item>Follow the traffic rules.</item>
    </string-array>
    //Crime
    <string name="title_crime">Crime Prevention Tips</string>
    <string name="description_crime">
        Crime threats are now circulating in the public, making people who love to spend time outdoors
        in danger. Crime can be in many forms, whether it is pickpocketing, fraud, or even sexual harrasment.
        Avoiding criminal threats is one of the most important thing to do for you to be safe. Check out
        the tips below for you to be safe!
    </string>
    <string-array name="tips_crime">
        <item>Don\'t wear excessive jewelry.</item>
        <item>Don\'t bring too many items.</item>
        <item>Avoid traveling alone in risky places.</item>
        <item>Always keep an eye on your surroundings.</item>
        <item>Be friends with people you can trust.</item>
    </string-array>
    //Fire
    <string name="title_fire">Fire Tips</string>
    <string name="description_fire">
        An enlarged and uncontrolled fire is a terrible thing considering its potential to have an impact
        on the fire in the area. We need to minimize the possibility of an unwanted fire around our area or
        something terrible and unexpected can happen. These are some tips to prevent such tragedy to happen!
    </string>
    <string name="pick_one_of_the_topics_below">Pick one of the topics below!</string>
    <string name="need_emergency_tips">Need emergency tips?</string>
    <string name="history">History</string>
    <string-array name="tips_fire">
        <item>Keep flammable objects away from heat.</item>
        <item>Turn off the power before travelling far.</item>
        <item>Remove the socket when not in use.</item>
        <item>Keep fire out of reach from children.</item>
        <item>Always check the electric current to prevent from short circuit.</item>
    </string-array>

    <string name="status_find">Finding responder</string>
    <string name="status_on_progress">On progress</string>
    <string name="status_resolved">Resolved</string>

    <string name="pickpocket">Pickpocket</string>
    <string name="status" translatable="false">Status:</string>
    <string name="report_details">Report Details</string>
    <string name="how_to_call_for_emergency">How to call for emergency?</string>
    <string name="content_call_for_emergency_1">- Go to the SOS menu on the main page</string>
    <string name="content_call_for_emergency_2">- Click the panic button and start speaking your situation. Your data is sent straight away to the responder</string>
    <string name="how_to_use_the_news_feed">How to use the news feed?</string>
    <string name="content_call_for_emergency_3">- Go to history menu to see the status of the responder</string>
    <string name="content_news_feeds_1">- Go to the news menu</string>
    <string name="content_news_feeds_2">- Wait until the news gets updated</string>
    <string name="content_news_feeds_3">- Scroll to navigate through the list of news</string>
    <string name="content_news_feeds_4">- Click the title tabs to switch news topic</string>
    <string name="how_to_use_tips_feature">How to use tips feature?</string>
    <string name="content_tips_feature_1">- Go to the tips feature</string>
    <string name="content_tips_feature_2">- Select the topic you want to see the tips on</string>
    <string name="content_tips_feature_3">- Watch the video and read the tips</string>
    <string name="send">Send</string>
    <string name="date">Date</string>
    <string name="type_of_emergency">Type of Emergency</string>
    <string name="natural_disaster">Natural Disaster</string>
    <string name="report">Report</string>
    <string name="location_of_occurence">Location of Occurence</string>
    <string name="maps">Maps</string>
</resources>