<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.guideline.GuidelineActivity">

    <include android:id="@+id/toolbar_guideline" layout="@layout/activity_guideline_toolbar"/>

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_guideline"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/title_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/how_to_call_for_emergency"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_toEndOf="@+id/title_1"
                    android:src="@drawable/ic_baseline_important" />

                <TextView
                    android:id="@+id/content_1_1"
                    android:layout_below="@+id/title_1"
                    android:layout_marginHorizontal="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_call_for_emergency_1"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:justificationMode="inter_word"/>
                <TextView
                    android:id="@+id/content_2_1"
                    android:layout_below="@+id/content_1_1"
                    android:layout_marginHorizontal="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_call_for_emergency_2"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:justificationMode="inter_word"/>
                <TextView
                    android:id="@+id/content_3_1"
                    android:layout_below="@+id/content_2_1"
                    android:layout_marginHorizontal="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_call_for_emergency_3"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:justificationMode="inter_word"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">
                <TextView
                    android:id="@+id/title_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/how_to_use_the_news_feed"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="21dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_toEndOf="@+id/title_2"
                    android:src="@drawable/ic_baseline_info" />
                <TextView
                    android:id="@+id/content_1_2"
                    android:layout_below="@+id/title_2"
                    android:layout_marginHorizontal="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_news_feeds_1"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/content_2_2"
                    android:layout_below="@+id/content_1_2"
                    android:layout_marginHorizontal="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_news_feeds_2"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/content_3_2"
                    android:layout_below="@+id/content_2_2"
                    android:layout_marginHorizontal="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_news_feeds_3"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/content_4_2"
                    android:layout_below="@+id/content_3_2"
                    android:layout_marginHorizontal="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_news_feeds_4"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">
                <TextView
                    android:id="@+id/title_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/how_to_use_tips_feature"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_toEndOf="@+id/title_3"
                    android:layout_toRightOf="@+id/title_3"
                    android:src="@drawable/ic_tips" />

                <TextView
                    android:id="@+id/content_1_3"
                    android:layout_below="@+id/title_3"
                    android:layout_marginHorizontal="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_tips_feature_1"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/content_2_3"
                    android:layout_below="@+id/content_1_3"
                    android:layout_marginHorizontal="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_tips_feature_2"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/content_3_3"
                    android:layout_below="@+id/content_2_3"
                    android:layout_marginHorizontal="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_tips_feature_3"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>
            </RelativeLayout>
        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>