<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@drawable/bottom_border">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_logo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:background="@color/purple_200"
        android:src="@drawable/ic_baseline_fire"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_report_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/pickpocket"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/img_logo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/status"
        android:textColor="@color/subtext"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/img_logo"
        app:layout_constraintTop_toBottomOf="@+id/tv_report_title" />

    <ImageView
        android:id="@+id/img_status"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="3dp"
        android:src="@drawable/ic_finding_responder"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/tv_report_title" />

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/status_find"
        android:textColor="@color/subtext"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/img_status"
        app:layout_constraintTop_toBottomOf="@+id/tv_report_title" />

</androidx.constraintlayout.widget.ConstraintLayout>